--- a/Grammophone.GenericContentModel.csproj
+++ b/Grammophone.GenericContentModel.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{79D2D4C7-C8DE-4F11-93ED-AA4E4D2FC974}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gramma.GenericContentModel</RootNamespace>
-    <AssemblyName>Gramma.GenericContentModel</AssemblyName>
+    <RootNamespace>Grammophone.GenericContentModel</RootNamespace>
+    <AssemblyName>Grammophone.GenericContentModel</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -22,7 +22,7 @@
     <DefineConstants>TRACE;DEBUG;NET_45_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Gramma.GenericContentModel.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Grammophone.GenericContentModel.XML</DocumentationFile>
     <NoWarn>1591</NoWarn>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
@@ -33,7 +33,7 @@
     <DefineConstants>TRACE;NET_45_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Gramma.GenericContentModel.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Grammophone.GenericContentModel.XML</DocumentationFile>
     <NoWarn>1591</NoWarn>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
